--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理员后台 - 小智</title>
+    <title>管理员后台 - 小斯</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -193,7 +193,7 @@
     <nav class="navbar navbar-expand navbar-light fixed-top">
         <div class="container-fluid">
             <span class="navbar-text">
-                <i class="fas fa-robot me-2"></i> <span class="d-none d-md-inline">小智欢迎您：</span><span id="username">{{ current_user.username }}</span>
+                <i class="fas fa-robot me-2"></i> <span class="d-none d-md-inline">小斯欢迎您：</span><span id="username">{{ current_user.username }}</span>
             </span>
             <div class="admin-controls ms-auto">
                 <a href="/chat" class="back-btn">
